[workspace]
members = [
    "crates/*",
    "server"
]

resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
as-any = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = "1"
percent-encoding = "2"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
http = "1.2.0"
hyper = "1"
tower = "0.5.2"
hyper-util = "0.1.10"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_json = "1"
anyhow = "1"
base64 = "0.22.1"
strum = "0.27"
strum_macros = "0.27"
url = "2.3"
dashmap = "6.1.0"
async-channel = "2.3.1"
lazy_static = "1.5.0"
chrono = "0.4.40"
futures = "0.3.31"
serde_yaml = "0.9.33"
rdkafka = "0.37"
uuid = "1.15.1"
regex = "1.11.1"
tokio-tungstenite = "0.21"
httparse = "1.10.1"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

error = { path = "crates/error" }
socks5_protocol = { path = "crates/socks5_protocol"}
http_impl = { path = "crates/http_impl" }
socks5_client = { path = "crates/socks5_client" }
rg-acl = { path = "crates/rg-acl" }
rg-common = { path = "crates/rg-common" }
rg-proxy = { path = "crates/rg-proxy" }
rg-stat = { path = "crates/rg-stat" }
rg-server-common = { path = "crates/rg-server-common" }
socks5_http = { path = "crates/socks5_http"}
args = { path = "crates/args" }
kafka = { path = "crates/kafka" }
config = { path = "crates/config" }
#[dependencies]
#as-any = "0.3"
#async-trait = "0.1"
#byteorder = "1"
#bytes = "1"
#percent-encoding = "2"
#serde = { version = "1", features = ["derive"], optional = true }
#thiserror = "2"
#tokio = { version = "1", default-features = false, features = [
#    "net",
#    "io-util",
#    "time",
#    "macros",
#    "rt",
#], optional = true }
#axum = "0.8.1"
#http = "1.2.0"
#hyper = "1.5.2"
#tower = "0.5.2"
#hyper-util = "0.1.10"
#tracing-subscriber = "0.3.19"
#tracing = "0.1.41"

#[dev-dependencies]
#clap = { version = "4", features = ["derive"] }
#ctrlc2 = { version = "3", features = ["tokio", "termination"] }
#dotenvy = "0.15"
#env_logger = "0.11"
#hickory-proto = "0.24"
#log = "0.4"
#moka = { version = "0.12", features = ["future"] }
#rand = "0.9"
#tokio = { version = "1", features = ["rt-multi-thread"] }
#error.workspace = true
#
#[[example]]
#name = "demo-client"
#path = "examples/demo-client.rs"

#
#[[example]]
#name = "demo-server"
#path = "examples/demo-server.rs"
#
#[[example]]
#name = "dns-query"
#path = "examples/dns-query.rs"
#
#[[example]]
#name = "s5-server"
#path = "examples/s5-server.rs"
#
#[[example]]
#name = "udp-client"
#path = "examples/udp-client.rs"
