[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
error.workspace = true
socks5_protocol.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
as-any.workspace = true
rg-acl.workspace = true
rg-common.workspace = true
rg-stat.workspace = true
rg-proxy.workspace = true
strum.workspace = true
futures.workspace = true
async-channel.workspace = true
async-trait.workspace = true
rg-server-common.workspace = true
args.workspace = true
regex.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
anyhow.workspace = true
serde_json.workspace = true
http_impl.workspace = true