[package]
name = "http_impl"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
error.workspace = true
http.workspace = true
bytes.workspace = true
httparse.workspace = true
tracing.workspace = true
base64.workspace = true
anyhow.workspace = true