[package]
name = "rg-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
http.workspace = true
base64.workspace = true
trust-dns-resolver.workspace = true
strum.workspace = true
strum_macros.workspace = true
