[package]
name = "rg-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rg-common.workspace = true
rg-acl.workspace = true
rg-stat.workspace = true
lazy_static.workspace = true
async-trait.workspace = true
trust-dns-resolver.workspace = true
anyhow.workspace = true
bytes.workspace = true
async-channel.workspace = true
dashmap.workspace = true
tracing.workspace = true
as-any.workspace = true
socks5_protocol.workspace = true
tokio = { workspace = true, features = ["full"] }
error.workspace = true
http.workspace = true
socks5_http.workspace = true
http_impl.workspace = true
