[package]
name = "rg-stat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rg-common.workspace = true
tokio.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
sysinfo = "0.33.1"
pinger = "2.0.0"